--- a/src/components/App/index.css
+++ b/src/components/App/index.css
@@ -1,4 +1,4 @@
-#app {
+:global(#app) {
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
